--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "1.0.0",
   "description": "let's do something togheter - react native application",
   "main": "index.js",
+  "engines": {
+    "node": "8.2.1",
+    "npm": "5.4.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack -wd --progress --colors --config webpack.config.js && node dist/server.js",
-    "devServer": "webpack -wd --progress --colors --config webpack.config.server.js && node dist/server.js"
+    "devServer": "webpack -wd --progress --colors --config webpack.config.server.js && node dist/server.js",
+    "start-dev": "nodemon dist/server.js",
+    "start": "node dist/server.js"
   },
   "author": "Gennaro Martone",
   "license": "ISC",
@@ -18,11 +24,16 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.24.1",
+    "nodemon": "^1.14.12",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.6"
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.2",
+    "jsonwebtoken": "^8.1.1",
+    "mongoose": "^5.0.4",
     "node-sass-middleware": "^0.11.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
