--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^0.16.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.4",
     "node-sass-middleware": "^0.11.0",
