--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack -wd --progress --colors --config webpack.config.js && node dist/server.js",
+    "build": "webpack --progress --color --config webpack.prod.js && webpack -wd --progress --colors --config webpack.config.server.js",
+    "dev": "webpack -wd --progress --colors --config webpack.dev.js && node dist/server.js",
     "devServer": "webpack -wd --progress --colors --config webpack.config.server.js && node dist/server.js",
     "start-dev": "nodemon dist/server.js",
     "start": "node dist/server.js"
@@ -19,32 +20,60 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-async-to-promises": "^1.0.5",
+    "babel-plugin-react-intl": "^2.4.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.10",
+    "eslint": "^4.18.0",
+    "eslint-loader": "^1.9.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.1.0",
     "nodemon": "^1.14.12",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.2",
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "url-loader": "^1.0.1",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.6"
+    "webpack-dev-server": "^2.9.6",
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "continuation-local-storage": "^3.2.1",
+    "cookie-session": "^2.0.0-beta.3",
+    "dotenv-webpack": "^1.5.5",
     "express": "^4.16.2",
+    "helmet": "^3.12.0",
     "jsonwebtoken": "^8.1.1",
+    "lodash": "^4.17.5",
+    "materialize-css": "^0.100.2",
     "mongoose": "^5.0.4",
     "node-sass-middleware": "^0.11.0",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.1.3",
+    "react-intl": "^2.4.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^3.7.2",
+    "redux-form": "^7.3.0",
     "s": "^0.1.1",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
-    "webpack-node-externals": "^1.5.4"
+    "stripe": "^5.5.0",
+    "uuid": "^3.2.1",
+    "webpack-node-externals": "^1.5.4",
+    "winston": "^2.4.1"
   }
 }
