modifiche per far funzionare

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev": "webpack -wd --progress --colors --config webpack.dev.js && node dist/server.js",
     "devServer": "webpack -wd --progress --colors --config webpack.config.server.js && node dist/server.js",
     "start-dev": "nodemon dist/server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run build",
+    "heroku-prebuild": "NPM_CONFIG_PRODUCTION=false npm install",
+    "heroku-postbuild": "npm run build",
     "start": "node dist/server.js"
   },
   "author": "Gennaro Martone",
