--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "axios": "^0.16.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "compression": "^1.7.2",
     "continuation-local-storage": "^3.2.1",
     "cookie-session": "^2.0.0-beta.3",
     "dotenv-webpack": "^1.5.5",
