--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "s": "^0.1.1",
+    "sendgrid": "^5.2.3",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
     "stripe": "^5.5.0",
