--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "express": "^4.16.2",
     "helmet": "^3.12.0",
     "jsonwebtoken": "^8.1.1",
+    "loadjs": "^3.5.4",
     "lodash": "^4.17.5",
     "materialize-css": "^0.100.2",
     "mongoose": "^5.0.4",
